2000-05-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c (dumpEntry): changed *EntryImpl classes to
	use the super() method.

2000-05-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Patch from Juergen: flags can now be passed
	to the dump modules.

2000-04-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed seg-faults on various imported but
	not found definitions. Based on a patch contributed by
	Bill Fenner.

2000-04-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-smi.c: fixed trailing comma in SMIv1 SEQUENCEs.
	Reported by Ira Wolf.

	* tools/smistrip.in: fixed bug reported by Ira Wolf: now we do not
	terminate a module when we've read the `END' of a macro definition.

	* win/: added VC++ build directory; Erik and Juergen.

	* tools/dump-{java,jdmk,dia}: removed obsolete experimental formats.

2000-04-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-smi.c: fixed 'xxxx'H DEFVALs as suggested by Ira Wolf.

	* tools/dump-cm.c: Update from Andreas.

	* Erik contributed various patches to compile libsmi in Win32
	systems using the VC++ compiler. Juergen aligned some of them.
	Some are still left to be done.

2000-04-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-cm.c: added conception model (cm) dump format from
	Andreas Mueller.

	* tools/dump-xml.c: various cleanups from Juergen.

2000-04-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-smi.c: applied some patches from Ira Wolf.

2000-03-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* Keith Dart <kdart@leviathan.kdart.com> has contributed a Python
	binding. See the mailinglist archive.

2000-03-29  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/: removed some obsolete header files.

	* tools/: some cleanups from Juergen.

	* tools/dump-jax.c (dumpScalars): added Sven's patches for
	notifications and scalar groups.

2000-03-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
