@@ -1,3 +1,8 @@
+2000-05-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* tools/dump-jax.c: Patch from Juergen: made file creation more
+	generic.
+
 2000-05-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* tools/dump-jax.c (dumpEntry): changed *EntryImpl classes to
